<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gastroenterico"
            android:icon="@drawable/section1"
            android:title="@string/title_menu_section1">

            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_patologie"
                        android:icon="@drawable/menu1"
                        android:title="@string/patologie" />
                    <item
                        android:id="@+id/nav_sintomi"
                        android:icon="@drawable/menu2"
                        android:title="@string/sintomi" />
                    <item
                        android:id="@+id/nav_complicanze"
                        android:icon="@drawable/menu3"
                        android:title="@string/complicanze" />
                    <item
                        android:id="@+id/nav_contenuti_aggiuntivi"
                        android:icon="@drawable/menu4"
                        android:title="@string/aggiuntivi" />
                </group>
            </menu>
        </item>
    </group>
</menu>