<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card.view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Login_gastroenterico">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="20dp" />

        <Button
            android:id="@+id/patologie_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:text="@string/patologie"
            android:textAlignment="center"
            android:backgroundTint="@color/blu_persia"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sintomi_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/sintomi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cirrosi_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/arancio"
            android:text="@string/complicanze"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/contenuti_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/senape"
            android:text="@string/aggiuntivi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

</LinearLayout>
