<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card.view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="@color/senape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:orientation="vertical"
        tools:context=".ContenutoApproccioPaziente">

        <TextView
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:text="@string/contenuto_paziente"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:padding="30dp"
            android:textSize="50dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/border_shape_nogreen"/>

        <Button
            android:id="@+id/button_valutazione1"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:textSize="30dp"
            android:textColor="@color/bronzo"
            android:text="@string/paziente_ps1"
            android:textAlignment="center"
            android:padding="50dp"/>

        <Button
            android:id="@+id/button_valutazione2"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:textSize="30dp"
            android:textColor="@color/bronzo"
            android:text="@string/paziente_ps2"
            android:textAlignment="center"
            android:padding="50dp"/>

    </LinearLayout>

</ScrollView>